# study_emu

./: .gitignore  LICENSE  README.md
chip8/: CMakeLists.txt
chip8/docs/: chip 8 commands.md  title.md
chip8/rom/: PONG_disasm_debug.txt  pong_disasm.txt
chip8/src/: main.cpp  typedef.h
chip8/src/hardware/: Chip8.cpp  Chip8.h
chip8/src/hardware/disasm_opcodes/: disasm_util.h  opcodes_bit.cpp  opcodes_code.cpp  opcodes_if.cpp  opcodes_keyborad.cpp  opcodes_load.cpp  opcodes_math.cpp
chip8/src/hardware/opcodes/: opcodes_bit.cpp  opcodes_code.cpp  opcodes_if.cpp  opcodes_keyborad.cpp  opcodes_load.cpp  opcodes_math.cpp
chip8/test/: CMakeLists.txt
chip8/test/src/: chip8_opcode_test_bit.cpp  chip8_opcode_test_code.cpp  chip8_opcode_test_if.cpp  chip8_opcode_test_jump.cpp  chip8_opcode_test_load.cpp  chip8_opcode_test_math.cpp
gameboy/: CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini  opcode.json
gameboy/docs/: gameboy_cpu.md
gameboy/docs/sub_pages/: gameboy_cpu_commands.md  gameboy_memory_map.md  gameboy_register_flags.md  gameboy_special_modes.md
gameboy/script/: basic_lua_element.lua  disassembler.lua  init.lua  init.txt  instructions.lua  jp_history.lua  json.lua  logger_viewer.lua  lua_commander.lua  memory_viewer.lua  memory_watch.lua  stack_traceback.lua  test_ui.lua
gameboy/shader/: basic_frag.glsl  basic_vert.glsl
gameboy/src/: main.cpp
gameboy/src/angelica/: GLProgram.cpp  GLRenderer.cpp  GLRenderer.h  Log.h  glutil.h  typedef.h
gameboy/src/gameboy/: Cartridge.cpp  Cartridge.h  GameboyCPU.cpp  GameboyCPU.h  GameboyCPUBroker.cpp  GameboyCPUBroker.h  Motherboard.cpp  Motherboard.h  Motherborad.cpp  Motherborad.h  typedef.h
gameboy/src/gameboy/instruction_set/: arithmetic_instruction.cpp  bit_set_reset_test.cpp  call_and_return.cpp  cpu_control_instruction.cpp  jump.cpp  jump_group.cpp  load_instruction.cpp  rotate_and_shift.cpp
gameboy/src/gameboy/memory/: GPU.cpp  GPU.h  Joypad.cpp  Joypad.h  MBC1.cpp  MBC1.h  MemoryInterface.h  MemoryManageUnit.cpp  MemoryManageUnit.h  MemoryUnit.cpp  MemoryUnit.h  Timer.cpp  Timer.h  VRAM.cpp  VRAM.h
gameboy/src/gameboy/memory_bank_controllers/: MBC1.cpp  MBC1.h  memory_interface.h
gameboy/src/gpu-playground/: background_test.cpp  background_test.h  playground_util.cpp  playground_util.h  rom_test.cpp  rom_test.h  sprite_test.cpp  sprite_test.h  texture_test.cpp  texture_test.h
gameboy/src/harucar/: LuaCommandViewer.cpp  LuaCommandViewer.h
gameboy/src/lib/: GLProgram.cpp  GLProgram.h  GLRenderer.cpp  GLRenderer.h  ImGuiContext.cpp  ImGuiContext.h  Window.cpp  Window.h  typedef.h
gameboy/src/lua-binding/: LuaContext.cpp  LuaContext.h  LuaImGuiHandler.cpp  LuaImGuiHandler.h  LuaImGuiViewer.cpp  LuaImGuiViewer.h  gameboy_luabinding.cpp  gameboy_luabinding.h
gameboy/test/: CMakeLists.txt
gameboy/test/script/: test_execute_file.lua
gameboy/test/src/: arithmetic_instruction_set.cpp  bit_set_reset_test.cpp  breakpoint.cpp  call_and_return.cpp  cartridge.cpp  cpu_control_instruction.cpp  cpu_interrupt_test.cpp  cpu_public_methods.cpp  gameboy_broker.cpp  gameboy_luabinding_test.cpp  gpu.cpp  gpu_interrupt.cpp  imgui_lua_test.cpp  jump_group.cpp  load_instruction_set.cpp  load_reg_n.cpp  lua_context.cpp  lua_util.h  main.cpp  mbc1.cpp  memory_manager_unit.cpp  register.cpp  rotate_and_shift.cpp  test_for_lua_bind_class.cpp  timer.cpp  util.h
harucar/: CMakeLists.txt  README.md
harucar/demo/: CMakeLists.txt  main.cpp
harucar/header/: CPUProvider.h  Provider.h  library.h
harucar/header/element/: cpu_element.h
harucar/include/: CPUProvider.h  CPUViewer.h  Viewer.h
harucar/include/base/: provider.h  provider_interface.h  viewer.h  viewer_interface.h
harucar/include/common/: common_element.h  common_logger.h  common_structure.h
harucar/include/cpu/: cpu_element.h  cpu_provider.h  cpu_viewer.h
harucar/include/element/: cpu_element.h
harucar/include/ui/: ui_event_protocol.h  ui_event_protocol_structure.h
harucar/include/util/: util_string.h
harucar/lib/imgui/: imgui.cpp  imgui.h  imgui_widgets.cpp
harucar/src/: CPUProvider.cpp  CPUViewer.cpp  library.cpp
harucar/src/common/: common_element.cpp  common_logger.cpp  common_structure.cpp
harucar/src/cpu/: cpu_element.cpp  cpu_provider.cpp  cpu_viewer.cpp
harucar/src/element/: common_element.cpp  cpu_element.cpp
harucar/src/ui/: ui_event_protocol.cpp  ui_event_protocol_structure.cpp
harucar/test/: CMakeLists.txt  cpu_provider.cpp  main.cpp  ui_event_protocol.cpp  ui_event_protocol_structure.cpp  util.cpp
harucar/test/common/: logger.cpp  util.cpp
nes/: README.md
